--- a/manifest.yml
+++ b/manifest.yml
@@ -27,3 +27,10 @@
 #   # Require the installation of other skills before installing this skill
 #   skill:
 #     - my-other-skill
+
+
+dependencies:
+
+        python:
+                - grpcio
+                - grpcio-tools
